# web2skill

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  marketplace.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/architecture/: runtime.md
docs/evals/: modelscope.md
docs/quality/: quality-gates.md  release-process.md
docs/superpowers/plans/: 2026-03-23-modelscope-token-capabilities.md  2026-03-23-standalone-skill-marketplace.md  2026-03-23-web2skill-v1.md
docs/superpowers/specs/: 2026-03-23-modelscope-token-capabilities-design.md  2026-03-23-standalone-skill-marketplace-design.md  2026-03-23-web2skill-design.md
skills/modelscope/: SKILL.md  skill.yaml
skills/modelscope/scripts/capabilities/: __init__.py  create_token.py  get_account_profile.py  get_model_overview.py  get_quickstart.py  get_token.py  list_model_files.py  list_tokens.py  search_models.py
skills/modelscope/scripts/lib/: __init__.py  contracts.py  login.py  parsers.py  provider.py  selectors.py  stdio.py
skills/modelscope/scripts/session/: __init__.py  doctor.py  login.py
src/web2skill/: __init__.py  cli.py
src/web2skill/browser/: __init__.py  capture.py  client.py
src/web2skill/bundled_skills/: __init__.py
src/web2skill/core/: __init__.py  contracts.py  guardrails.py  runtime.py  script_runner.py  sessions.py  traces.py
src/web2skill/providers/modelscope/: __init__.py  contracts.py  drift.py  login.py  parsers.py  provider.py  selectors.py
src/web2skill/skills/: __init__.py  execution.py  installer.py  manifests.py  marketplaces.py  registry.py  render.py
tests/: conftest.py
tests/drift/: test_modelscope_drift.py
tests/e2e/: test_modelscope_live.py
tests/fixtures/modelscope/: account_profile.json  model_files.json  model_overview.json  quickstart.json  search_models.json  token_list.json
tests/integration/: test_artifact_distribution.py  test_bundle_runtime.py  test_bundle_sessions.py  test_cli_json.py  test_marketplaces.py  test_modelscope_provider.py  test_replay.py  test_skill_installation.py
tests/unit/: test_package_metadata.py
tests/unit/core/: test_contracts.py  test_guardrails.py  test_runtime.py  test_script_runner.py
tests/unit/providers/modelscope/: test_login.py  test_parsers.py  test_tokens.py
tests/unit/skills/: test_manifests.py  test_marketplace_manifest.py  test_registry.py
