[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[project]
name = "web2skill"
version = "0.1.0"
description = "Turn stable SaaS capabilities into agent-usable skills."
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Codex" },
]
dependencies = [
  "httpx>=0.28.1,<0.29",
  "playwright>=1.52.0,<2",
  "pydantic>=2.11.0,<3",
  "pydantic-settings>=2.9.0,<3",
  "pyyaml>=6.0.2,<7",
  "typer>=0.15.4,<0.16",
]

[dependency-groups]
dev = [
  "pyright>=1.1.399,<2",
  "pytest>=8.3.5,<9",
  "pytest-asyncio>=0.26.0,<0.27",
  "pytest-cov>=6.1.1,<7",
  "ruff>=0.11.5,<0.12",
]

[project.urls]
Homepage = "https://github.com/example/web2skill"

[tool.hatch.build.targets.wheel]
packages = ["src/web2skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

