[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[project]
name = "web2skill"
version = "0.1.0"
description = "Turn stable SaaS capabilities into agent-usable skills."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13,<3.15"
license = { file = "LICENSE" }
authors = [
  { name = "Codex" },
]
keywords = [
  "agent-skills",
  "browser-automation",
  "modelscope",
  "playwright",
  "saas",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "browser-cookie3>=0.20.1",
  "httpx>=0.28.1,<0.29",
  "playwright>=1.52.0,<2",
  "pydantic>=2.11.0,<3",
  "pydantic-settings>=2.9.0,<3",
  "pyyaml>=6.0.2,<7",
  "typer>=0.15.4,<0.16",
]

[dependency-groups]
dev = [
  "pyright>=1.1.399,<2",
  "pytest>=8.3.5,<9",
  "pytest-asyncio>=0.26.0,<0.27",
  "pytest-cov>=6.1.1,<7",
  "ruff>=0.11.5,<0.12",
  "twine>=6.1.0,<7",
]

[project.urls]
Homepage = "https://github.com/skyswordw/web2skill"
Repository = "https://github.com/skyswordw/web2skill"
Documentation = "https://github.com/skyswordw/web2skill#readme"
Issues = "https://github.com/skyswordw/web2skill/issues"

[project.scripts]
web2skill = "web2skill.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/web2skill"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "web2skill/bundled_skills"

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
  "skills/**",
  "README.md",
  "README.zh-CN.md",
  "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
